remove search endpoint
